frontend/src/sharedComponents/NewStatusModal/NewStatusModal.module.css
/* New Status Modal */
.newStatusFormContainer {
    position: absolute;
}

.profilePicture {
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
    margin-right: 0.5rem;
    object-fit: cover; 
}

.newStatusFormContainer p {
    font-weight: 600;
}

.newStatusFormContainer textarea {
    border: none;
    outline: none;
    font-size: 1.1rem;
    resize: none;
}

.emojiIcon {
    align-self: end;
}

.postButton {
    border: none;
    outline: none;
    font-weight: 600;
    padding-block: 7px;
    width: 460px;
}

.postButton:disabled {
    background-color: #e4e6ea;
    color: rgb(60, 60, 60);
}

.customFileInputButton {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 10px;
    background-color: white;
    color: black;
    border: 0.5px solid gray;
    border-radius: 10px;
    box-shadow: 2px 2px 2px rgba(0,0,0,0.14);
    cursor: pointer;
    text-align: center;
    margin-top: 20px;
    font-size: 0.8rem;
    font-weight: 600;
}

.customFileInputButton:hover {
    cursor: pointer;
}

.selectedImage {
    width: 8rem;
}

